# Tektura-i-Karton

./: README.md  index.html
karton/: README.md
karton/apps/calendar/: README.md
karton/apps/clock/: README.md
karton/apps/filemanager/: README.md
karton/apps/notifications/: README.md
karton/apps/screenshots/: README.md
karton/apps/settings/: README.md
karton/apps/shell/: README.md  meson.build  run.sh
karton/apps/shell/src/: main.c
karton/apps/store/: README.md
karton/apps/system-monitor/: README.md
karton/apps/terminal/: README.md
karton/theme/: README.md  gtk-dark.css  gtk-light.css  tektura-decorations.ini
tektura/: meson.build
tektura/src/: config.c  config.h  decoration.c  decoration.h  i18n.c  i18n.h  idle.c  idle.h  input.c  input.h  ipc.c  ipc.h  layer.c  layer.h  lock.c  lock.h  main.c  output.c  output.h  protocols.c  protocols.h  security_manager.c  security_manager.h  server.c  server.h  view.c  view.h  wallpaper.c  wallpaper.h  workspace.c  workspace.h  xwayland.c  xwayland.h
